fix: use Java 17 compatible source output reader